# bigquery

./: README.md  pyproject.toml
dags/: load_big_wiki.py  wiki_1_get_data_2024.py  wiki_1_get_data_2025.py  wiki_1_get_data_2025_wget.py  wiki_2_load_bigquery.py
pyspark/: wiki_spark.py
src/bigquery/: sample.py
